change google login button

--- a/OmneFictio.Web/Views/Home/Register.cshtml
+++ b/OmneFictio.Web/Views/Home/Register.cshtml
@@ -20,13 +20,17 @@
             <input type="submit" value="Register" class="rm-submit">
         </div>
         <div class="rm-registerwith">
-            <div class="facebook">
+            <div class="g_id_signin" data-type="standart"></div>
+            <!--<div class="facebook">
                 <i class="bi bi-facebook"></i>
             </div>
             <div class="twitter">
                 <i class="bi bi-twitter"></i>
             </div>
-            <div class="google g_id_signin" data-type="standard"></div>
+            <div class="google">
+                <i class="bi bi-google"></i>
+                <div class="g_id_signin" data-type="standart"></div>
+            </div>-->
             <!--<i class="bi bi-google"></i>-->
         </div>
     </div>
