--- a/OmneFictio.Web/wwwroot/css/register.css
+++ b/OmneFictio.Web/wwwroot/css/register.css
@@ -1,3 +1,18 @@
+/*
+.qJTHM{
+    height: 100% !important;
+    width: 100% !important;
+    > .container{
+        height: 100% !important;
+        width: 100% !important;
+        > div{
+            max-width: unset !important;
+            min-width: unset !important;
+            height: 100% !important;
+            width: 100% !important;
+        }
+    }
+}*/
 .register {
   display: flex;
   flex-direction: column;
@@ -54,46 +69,58 @@
 }
 .register .register-main .rm-registerwith {
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
+  /*> div{
+      cursor: pointer;
+      padding: 6px 16px;
+      border-radius: 6px;
+      transition: 0.2s ease;
+      > i{
+          font-size: 1.2rem;
+          margin: 0 auto;
+          color: #fff;
+      }
+  }
+  .facebook{
+      background-color: #284878;
+      &:hover{
+          background-color: #3e5b86;
+      }
+  }
+  .twitter{
+      background-color: #4c7ac0;
+      &:hover{
+          background-color: #769ad2;
+      }
+  }
+
+  .google{
+      background-color: #a23535;
+      &:hover{
+          background-color: #b25252;
+      }
+      position: relative;
+      .g_id_signin{
+          opacity: 0;
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100% !important;
+          height: 100% !important;
+          overflow: hidden;
+          display: flex;
+          iframe{
+              width: 100% !important;
+              height: 100% !important;
+              margin: 0 !important;
+          }
+      }
+  }*/
 }
 .register .register-main .rm-registerwith > div {
-  cursor: pointer;
-  padding: 6px 16px;
-  border-radius: 6px;
-  transition: 0.2s ease;
-}
-.register .register-main .rm-registerwith > div > i {
-  font-size: 1.2rem;
-  margin: 0 auto;
-  color: #fff;
-}
-.register .register-main .rm-registerwith .facebook {
-  background-color: #284878;
-}
-.register .register-main .rm-registerwith .facebook:hover {
-  background-color: #3e5b86;
-}
-.register .register-main .rm-registerwith .twitter {
-  background-color: #4c7ac0;
-}
-.register .register-main .rm-registerwith .twitter:hover {
-  background-color: #769ad2;
-}
-.register .register-main .rm-registerwith .google {
-  background-color: #a23535;
-  position: relative;
-}
-.register .register-main .rm-registerwith .google:hover {
-  background-color: #b25252;
-}
-.register .register-main .rm-registerwith .google > div {
-  position: absolute !important;
-  left: 0;
-  top: 0;
-  width: 100% !important;
-  height: 100% !important;
-  opacity: 0;
+  margin-bottom: 12px;
 }
 .register .register-extra {
   display: flex;
