--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -258,11 +258,15 @@ header{
         }
     }
     .lm-loginwith{
+        padding: 10px 20px 0;
         display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        padding: 10px 20px;
+        flex-direction: column;
+        align-items: center;
+        overflow: hidden;
         > div{
+            margin-bottom: 12px;
+        }
+        /*> div{
             cursor: pointer;
             padding: 6px 16px;
             border-radius: 6px;
@@ -290,16 +294,7 @@ header{
             &:hover{
                 background-color: #b25252;
             }
-            position: relative;
-            > div{
-                position: absolute !important;
-                left:0;
-                top:0;
-                width: 100% !important;
-                height: 100% !important;
-                opacity: 0;
-            }
-        }
+        }*/
     }
     .lm-forgot{
         text-align: center;
