login cookie and session 1

--- a/OmneFictio.Web/Views/Home/Index.cshtml
+++ b/OmneFictio.Web/Views/Home/Index.cshtml
@@ -9,19 +9,19 @@
 }
 @using OmneFictio.Web.Models
 @model IndexViewmodel
-
+<!--
 <div><span>User ID and Username:</span>
-@{
+{
     if(Model.sessionUserId != null){
-        <span>@Model.sessionUserId</span>
+        <span>Model.sessionUserId</span>
     }
     <span> --- </span>
     if(Model.sessionUsername != null){
-        <span>@Model.sessionUsername</span>
+        <span>Model.sessionUsername</span>
     }
 }
 </div>
-
+-->
 <div class="linkgroups">
     <div class="linkgroup_cont readingtime">
         <span>Reading Time</span>
