--- a/OmneFictio.Web/wwwroot/css/index.css
+++ b/OmneFictio.Web/wwwroot/css/index.css
@@ -3,9 +3,14 @@
   background-color: var(--background-color2);
   overflow: hidden;
   max-height: 260px;
+  box-shadow: 0px 2px 4px -2px rgba(0, 0, 0, 0.25);
 }
 .post:last-child {
   margin-bottom: unset;
+}
+
+.darkmode .post {
+  box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.25);
 }
 
 .post-detail {
@@ -254,6 +259,7 @@ main {
   font-family: "Itim", cursive;
   display: flex;
   flex-direction: column;
+  box-shadow: 0px 2px 4px -2px rgba(0, 0, 0, 0.25);
 }
 .linkgroups .linkgroup_cont:last-child {
   margin-bottom: unset;
@@ -285,6 +291,10 @@ main {
   text-align: center;
   transition: 0.1s;
   height: 32px;
+}
+
+.darkmode .linkgroup_cont {
+  box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.25);
 }
 
 .misclinks > .linkgroup {
