--- a/OmneFictio.Web/wwwroot/css/index.scss
+++ b/OmneFictio.Web/wwwroot/css/index.scss
@@ -18,6 +18,9 @@ main{
         font-family: 'Itim', cursive;
         display: flex;
         flex-direction: column;
+        -webkit-box-shadow: 0px 2px 4px -2px rgb(0 0 0 / 25%);
+        -moz-box-shadow: 0px 2px 4px -2px rgb(0 0 0 / 25%);
+        box-shadow: 0px 2px 4px -2px rgb(0 0 0 / 25%);
         &:last-child{
             margin-bottom: unset;
         }
@@ -50,6 +53,11 @@ main{
             }
         }
     }
+}
+.darkmode .linkgroup_cont{
+    -webkit-box-shadow: 0px 2px 6px 0px rgb(0 0 0 / 25%);
+    -moz-box-shadow: 0px 2px 6px 0px rgb(0 0 0 / 25%);
+    box-shadow: 0px 2px 6px 0px rgb(0 0 0 / 25%);
 }
 
 .misclinks > .linkgroup{
