--- a/OmneFictio.Web/wwwroot/css/post.scss
+++ b/OmneFictio.Web/wwwroot/css/post.scss
@@ -4,9 +4,17 @@
     background-color: var(--background-color2);
     overflow: hidden;
     max-height: 260px;
+    -webkit-box-shadow: 0px 2px 4px -2px rgb(0 0 0 / 25%);
+    -moz-box-shadow: 0px 2px 4px -2px rgb(0 0 0 / 25%);
+    box-shadow: 0px 2px 4px -2px rgb(0 0 0 / 25%);
     &:last-child{
         margin-bottom: unset;
     }
+}
+.darkmode .post{
+    -webkit-box-shadow: 0px 2px 6px 0px rgb(0 0 0 / 25%);
+    -moz-box-shadow: 0px 2px 6px 0px rgb(0 0 0 / 25%);
+    box-shadow: 0px 2px 6px 0px rgb(0 0 0 / 25%);
 }
 .post-detail{
     display: flex;
