--- a/OmneFictio.Web/wwwroot/css/read.css
+++ b/OmneFictio.Web/wwwroot/css/read.css
@@ -3,9 +3,14 @@
   background-color: var(--background-color2);
   overflow: hidden;
   max-height: 260px;
+  box-shadow: 0px 2px 4px -2px rgba(0, 0, 0, 0.25);
 }
 .post:last-child {
   margin-bottom: unset;
+}
+
+.darkmode .post {
+  box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.25);
 }
 
 .post-detail {
