--- a/OmneFictio.Web/wwwroot/css/site.css
+++ b/OmneFictio.Web/wwwroot/css/site.css
@@ -99,7 +99,7 @@ a:hover {
   width: 100%;
   height: 100%;
   position: fixed;
-  background-color: rgba(0, 0, 0, 0.3764705882);
+  background-color: rgba(0, 0, 0, 0.5);
   z-index: 200;
 }
 
@@ -190,6 +190,7 @@ header .header-wrap {
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  overflow: hidden;
 }
 .drawer .dw-top .dw-account .dw-userimg {
   display: flex;
@@ -238,7 +239,7 @@ header .header-wrap {
 .drawer .dw-list > ul > li > a:hover {
   background-color: var(--background-color2);
 }
-.drawer .dw-settings {
+.drawer .dw-redbutton {
   display: flex;
   position: -webkit-sticky;
   position: sticky;
@@ -248,7 +249,7 @@ header .header-wrap {
   transition: 0.2s ease;
   background-color: #b73d3d;
 }
-.drawer .dw-settings:hover {
+.drawer .dw-redbutton:hover {
   background-color: #b94f4f;
 }
 .drawer .dw-icon-cont {
@@ -558,7 +559,7 @@ header .header-wrap {
 .account-cont .account-dropdown > ul > li > a:hover {
   background-color: var(--background-color-hover1);
 }
-.account-cont .account-dropdown .acc_dd_settings {
+.account-cont .account-dropdown .acc_dd_redbutton {
   margin-top: 14px;
   padding: 4px 20px;
   text-align: center;
@@ -566,7 +567,7 @@ header .header-wrap {
   transition: 0.2s ease;
   background-color: #b73d3d;
 }
-.account-cont .account-dropdown .acc_dd_settings:hover {
+.account-cont .account-dropdown .acc_dd_redbutton:hover {
   background-color: #b94f4f;
 }
 
