--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -191,7 +191,7 @@
                     <div class="account-dropdown">
                         <ul>
                             @if(userId != -1){
-                                <li><a href="#">@username</a></li>
+                                <li><a class="ad-username">@username</a></li>
                                 <li><a href="#">Profile</a></li>
                                 <li><a href="#">Library</a></li>
                                 <li><a href="#">Friends</a></li>
