login fetch api 2

--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
     </div>
     <div class="click-outside"></div>
     <div class="f-modaldarkness"></div>
-    <form asp-controller="Auth" asp-action="UserLogin" method="post" class="login-modal" id="login-modal">
+    <form class="login-modal" id="login-modal">
         <div class="lm-header">
             <span class="lm-title">Login</span>
             <div class="lm-closebtn">
