--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -257,6 +257,16 @@ header{
                 background-color: #5a5b95;
             }
         }
+        .lm-message{
+            margin-top: 6px;
+            text-align: center;
+            color: #b22525;
+        }
+        .lm-success{
+            margin-top: 6px;
+            text-align: center;
+            color: #36914e;
+        }
     }
     .lm-loginwith{
         padding: 10px 20px 0;
