--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -57,6 +57,8 @@
             <input type="text" placeholder="Username/Email" name="Username" class="lm-textbox">
             <input type="password" placeholder="Password" name="Pw" class="lm-textbox">
             <input type="submit" value="Login" class="lm-submit">
+            <span class="lm-message" id="loginmodal-message"></span>
+            <span class="lm-success" id="loginmodal-success"></span>
         </div>
         <div class="lm-loginwith">
             <div class="g_id_signin" data-type="standart"></div>
