--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -1,16 +1,13 @@
-﻿
+﻿@using System.Security.Claims
+
 @inject IHttpContextAccessor Accessor
 @{
-    string userPicture = "none";
-    int userId = -1;
+    string userId = "-1";
     string username = "";
-    if(Accessor.HttpContext.Request.Cookies["userPicture"] != null){
-        userPicture = Accessor.HttpContext.Request.Cookies["userPicture"].ToString();
-    }
-    if(Accessor.HttpContext.Session.GetString("userId") != null){
-        userId = Convert.ToInt32(Accessor.HttpContext.Session.GetString("userId"));
-        username = Accessor.HttpContext.Session.GetString("username");
-    }
+    string userPicture = "none"; 
+    userId = User.Claims.FirstOrDefault(claim => claim.Type == ClaimTypes.NameIdentifier)?.Value ?? "-1";
+    username = User.Claims.FirstOrDefault(claim => claim.Type == ClaimTypes.Name)?.Value ?? "";
+    userPicture = User.Claims.FirstOrDefault(claim => claim.Type == ClaimTypes.Actor)?.Value ?? "none";
 }
 
 
@@ -41,7 +38,8 @@
     <div id="g_id_onload"
          data-client_id="589655350334-bdk3rgelbo3i4otkj08f2hvc69g1lql4.apps.googleusercontent.com"
          data-ux_mode="popup"
-         data-callback="googleHandleCredentialResponse">
+         data-callback="googleHandleCredentialResponse"
+         data-skip_prompt_cookie=".AspNetCore.Cookies">
          <!--data-login_uri="https://localhost:7067/Auth/GoogleSigninDirectly">-->
     </div>
     <div class="click-outside"></div>
@@ -110,7 +108,7 @@
         <div class="dw-top">
             <div class="dw-account">
                 <div class="dw-userimg">
-                    @if(userPicture != "none" && userId != -1){
+                    @if(userPicture != "none" && userId != "-1"){
                         @Html.Raw("<img src='" + userPicture + "'/>");
                     }else{
                         <i class="bi bi-person-square"></i>
@@ -118,7 +116,7 @@
                     <!--<img src="https://icon-library.com/images/no-user-image-icon/no-user-image-icon-0.jpg">-->
                 </div>
                 <!--<i class="bi bi-person-bounding-box dw-userimg"></i>-->
-                @if(userId != -1){
+                @if(userId != "-1"){
                     @username
                 }
                 else{
@@ -136,7 +134,7 @@
         </div>
         <div class="dw-list">
             <ul>
-                @if(userId != -1){
+                @if(userId != "-1"){
                     <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-person"></i></div>Profile</a></li>
                     <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-journals"></i></div>Library</a></li>
                     <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-people"></i></div>Friends</a></li>
@@ -152,7 +150,7 @@
                 <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-gear-fill"></i></div>Settings</a></li>
             </ul>
         </div>
-        @if(userId != -1){
+        @if(userId != "-1"){
             <a asp-controller="Auth" asp-action="Logout" class="dw-redbutton"><div class="dw-icon-cont"><i class="bi bi-box-arrow-left"></i></div>Logout</a>
         }
     </div>
@@ -180,7 +178,7 @@
                 <div class="account-cont">
                     <div class="ppic-wrap">
                         @{
-                            if(userPicture != "none" && userId != -1){
+                            if(userId != "-1"){
                                 @Html.Raw("<img src='" + userPicture + "'/>");
                             }else{
                                 <i class="bi bi-person-square"></i>
@@ -193,7 +191,7 @@
                     </div>
                     <div class="account-dropdown">
                         <ul>
-                            @if(userId != -1){
+                            @if(userId != "-1"){
                                 <li><a class="ad-username">@username</a></li>
                                 <li><a href="#">Profile</a></li>
                                 <li><a href="#">Library</a></li>
@@ -209,7 +207,7 @@
                             <li><a href="#">Shop</a></li>
                             <li><a href="#">Settings</a></li>
                         </ul>
-                        @if(userId != -1){
+                        @if(userId != "-1"){
                             <a asp-controller="Auth" asp-action="LogOut" class="acc_dd_redbutton">Logout</a>
                         }
                         <!--<a href="#" class="acc_dd_redbutton">Logout</a>-->
