login add remember me

--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
          data-client_id="589655350334-bdk3rgelbo3i4otkj08f2hvc69g1lql4.apps.googleusercontent.com"
          data-ux_mode="popup"
          data-callback="googleHandleCredentialResponse"
-         data-skip_prompt_cookie=".AspNetCore.Cookies">
+         data-skip_prompt_cookie="UserAuth">
          <!--data-login_uri="https://localhost:7067/Auth/GoogleSigninDirectly">-->
     </div>
     <div class="click-outside"></div>
@@ -74,7 +74,7 @@
             <span>I forgot <a href="#">something</a></span>
         </div>
         <div class="lm-rememberme">
-            <label><span>Remember me</span><input type="checkbox" name="rememberme"></label>
+            <label><span>Remember me</span><input type="checkbox" name="RememberMe"></label>
             <a asp-controller="Home" asp-action="Register">Sign Up</a>
         </div>
     </form>
