--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -74,7 +74,7 @@
             <span>I forgot <a href="#">something</a></span>
         </div>
         <div class="lm-rememberme">
-            <label><span>Remember me</span><input type="checkbox" name="RememberMe"></label>
+            <label><span>Remember me</span><input type="checkbox" name="RememberMe" value="true" checked></label>
             <a asp-controller="Home" asp-action="Register">Sign Up</a>
         </div>
     </form>
