--- a/OmneFictio.Web/wwwroot/css/site.css
+++ b/OmneFictio.Web/wwwroot/css/site.css
@@ -328,15 +328,13 @@ header .header-wrap {
 .login-modal .lm-primary .lm-submit:hover {
   background-color: #5a5b95;
 }
-.login-modal .lm-primary .lm-message {
+.login-modal .lm-primary span {
   margin-top: 6px;
   text-align: center;
   color: #b22525;
 }
 .login-modal .lm-primary .lm-success {
-  margin-top: 6px;
-  text-align: center;
-  color: #36914e;
+  color: #36914e !important;
 }
 .login-modal .lm-loginwith {
   padding: 10px 20px 0;
