--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -257,15 +257,13 @@ header{
                 background-color: #5a5b95;
             }
         }
-        .lm-message{
+        span{
             margin-top: 6px;
             text-align: center;
             color: #b22525;
         }
         .lm-success{
-            margin-top: 6px;
-            text-align: center;
-            color: #36914e;
+            color: #36914e !important;
         }
     }
     .lm-loginwith{
