--- a/OmneFictio.Web/wwwroot/css/register.scss
+++ b/OmneFictio.Web/wwwroot/css/register.scss
@@ -64,6 +64,14 @@
                     background-color: #5a5b95;
                 }
             }
+            span{
+                margin-top: 6px;
+                text-align: center;
+                color: #b22525;
+            }
+            .rm-success{
+                color: #36914e !important;
+            }
         }
         .rm-registerwith{
             display: flex;
@@ -73,52 +81,6 @@
             > div{
                 margin-bottom: 12px;
             }
-            /*> div{
-                cursor: pointer;
-                padding: 6px 16px;
-                border-radius: 6px;
-                transition: 0.2s ease;
-                > i{
-                    font-size: 1.2rem;
-                    margin: 0 auto;
-                    color: #fff;
-                }
-            }
-            .facebook{
-                background-color: #284878;
-                &:hover{
-                    background-color: #3e5b86;
-                }
-            }
-            .twitter{
-                background-color: #4c7ac0;
-                &:hover{
-                    background-color: #769ad2;
-                }
-            }
-            
-            .google{
-                background-color: #a23535;
-                &:hover{
-                    background-color: #b25252;
-                }
-                position: relative;
-                .g_id_signin{
-                    opacity: 0;
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    width: 100% !important;
-                    height: 100% !important;
-                    overflow: hidden;
-                    display: flex;
-                    iframe{
-                        width: 100% !important;
-                        height: 100% !important;
-                        margin: 0 !important;
-                    }
-                }
-            }*/
         }
     }
     .register-extra{
