javascript register validation

--- a/OmneFictio.Web/Views/Home/Register.cshtml
+++ b/OmneFictio.Web/Views/Home/Register.cshtml
@@ -13,10 +13,10 @@
             <span>Register</span>
         </div>
         <div class="rm-primary">
-            <input type="text" placeholder="Username" name="Username" class="rm-textbox">
-            <input type="text" placeholder="Email" name="Email" class="rm-textbox">
-            <input type="password" placeholder="Password" name="Pw" class="rm-textbox">
-            <input type="password" placeholder="Confirm Password" class="rm-textbox">
+            <input type="text" placeholder="Username" name="Username" class="rm-textbox" id="rm-username">
+            <input type="text" placeholder="Email" name="Email" class="rm-textbox" id="rm-email">
+            <input type="password" placeholder="Password" name="Pw" class="rm-textbox" id="rm-pw">
+            <input type="password" placeholder="Confirm Password" class="rm-textbox" id="rm-pwconfirm">
             <input type="submit" value="Register" class="rm-submit">
             <span class="rm-message" id="registerform-message"></span>
             <span class="rm-success" id="registerform-success"></span>
