nav other links

--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -261,27 +261,32 @@
     </ul>
 </div>
 
-<div class="nav-cont">
-    <div class="navcont-links">
-        <div class="navlinks nl-readingtime">
+<nav class="nav-cont">
+    <div class="nav-primary">
+        <div class="nlink-cont np-readingtime">
             <a class="navlink_original" asp-controller="Home" asp-action="Read" asp-route-type="story">Story</a>
             <a class="navlink_scenario" asp-controller="Home" asp-action="Read" asp-route-type="scenario">Scenario</a>
             <a class="navlink_fanfiction" asp-controller="Home" asp-action="Read" asp-route-type="fanfiction">Fanfiction</a>
             <a class="navlink_original" asp-controller="Home" asp-action="Read" asp-route-type="plot">Plot</a>
         </div>
-        <div class="navlinks nl-aboutyou">
-            <a class="navlink_original">Library</a>
-            <a class="navlink_scenario">My Stuff</a>
-            <a class="navlink_fanfiction">History</a>
+        <div class="nlink-cont np-aboutyou">
+            <a class="">Library</a>
+            <a class="">My Stuff</a>
+            <a class="">History</a>
         </div>
     </div>
     <div class="nav-ad1">
 
     </div>
-    <nav class="sticky-nav">
-        
-    </nav>
-</div>
+    <div class="nav-others">
+        <a class="">Shop</a>
+        <a class="">Community</a>
+        <a class="">News</a>
+        <a class="">Tutorials</a>
+        <a class="">Customize</a>
+        <a class="">Settings</a>
+    </div>
+</nav>
 <div class="posts-cont">
     <div class="post-options">
         <div class="po-orderby">
