--- a/OmneFictio.Web/wwwroot/css/theme.css
+++ b/OmneFictio.Web/wwwroot/css/theme.css
@@ -20,6 +20,8 @@
   --navlink-readingtime-color-hover: #607d7d;
   --navlink-aboutyou-color: #473c3c;
   --navlink-aboutyou-color-hover: #6c5959;
+  --navlink-others-color: #494152;
+  --navlink-others-color-hover: #5f5a66;
   --register-form-color: #404040;
   --register-input-color: #1d1d1d;
   --searchplaceholder-color: #939393;
@@ -47,6 +49,8 @@
   --navlink-readingtime-color-hover: #777ea8;
   --navlink-aboutyou-color: #a08888;
   --navlink-aboutyou-color-hover: #8d6767;
+  --navlink-others-color: #9a90a6;
+  --navlink-others-color-hover: #816f96;
   --register-form-color: #f0f0f0;
   --register-input-color: #dcdcdc;
 }
