--- a/OmneFictio.Web/wwwroot/css/read.scss
+++ b/OmneFictio.Web/wwwroot/css/read.scss
@@ -63,7 +63,8 @@ main{
     margin: 20px 20px 0 0;
     flex-shrink: 0;
     font-family: 'Itim', cursive;
-    .navcont-links{
+    color: #fff;
+    .nav-primary{
         display: flex;
         flex-direction: column;
         background-color: var(--background-color1) !important;
@@ -72,13 +73,12 @@ main{
         width: 100%;
         min-height: 140px;
         margin-bottom: 12px;
-        .navlinks{
+        .nlink-cont{
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
             gap: 10px;
             padding: 6px;
-            color: #fff;
             > a{
                 padding: 4px 14px;
                 border-radius: 8px;
@@ -88,13 +88,13 @@ main{
                 cursor: pointer;
             }
         }
-        .nl-readingtime > a{
+        .np-readingtime > a{
             background-color: var(--navlink-readingtime-color);
             &:hover{
                 background-color: var(--navlink-readingtime-color-hover);
             }
         }
-        .nl-aboutyou > a{
+        .np-aboutyou > a{
             background-color: var(--navlink-aboutyou-color);
             &:hover{
                 background-color: var(--navlink-aboutyou-color-hover);
@@ -108,13 +108,30 @@ main{
         height: 200px;
         margin-bottom: 12px;
     }
-    .sticky-nav{
-        display: flex;
+    .nav-others{
+        position: -webkit-sticky; /* Safari & IE */
+        position: sticky;
+        top: 20px;
         background-color: var(--background-color1) !important;
         border-radius: 10px;
-        padding: 8px;
         width: 100%;
-        height: 420px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        gap: 10px;
+        padding: 14px;
+        > a{
+            padding: 4px 14px;
+            border-radius: 8px;
+            border: none;
+            outline: none;
+            transition: 0.2s ease;
+            cursor: pointer;
+            background-color: var(--navlink-others-color);
+            &:hover{
+                background-color: var(--navlink-others-color-hover);
+            }
+        }
     }
 }
 
